# meshcore-rs

./: Cargo.toml  Makefile  README.md  jonesy.toml
.github/workflows/: jonesy.yml
examples/: btle.rs  serial_usb.rs
src/: error.rs  events.rs  lib.rs  packets.rs  parsing.rs  reader.rs
src/commands/: base.rs
src/meshcore/: ble.rs
