[package]
name = "meshcore-rs"
version = "0.1.9"
edition = "2021"
description = "Rust library for communicating with MeshCore companion radio nodes"
license = "MIT"
repository = "https://github.com/andrewdavidmackenzie/meshcore-rs"
keywords = ["meshcore", "lora", "mesh", "radio"]
categories = ["network-programming", "embedded", "hardware-support"]

[dependencies]
tokio = { version = "1", features = ["full", "sync", "time", "io-util"] }
tokio-serial = "5"
tokio-stream = { version = "0.1", features = ["sync"] }
thiserror = "2"
bytes = "1"
tracing = "0.1"
futures = "0.3"

# BLE support (optional)
btleplug = { version = "0.12", optional = true }
uuid = { version = "1" }

[features]
default = ["serial", "tcp", "ble"]
serial = []
tcp = []
ble = ["btleplug"]

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
